# ModernCMake

./: .gitignore  Dockerfile  README.md
.github/workflows/: build-slides.yml
example/: bash.xml  header.tex
example/cmake/: CMakeLists.txt
example/episodes/: building_simple_targets.md  example.md  macros_and_functions.md  variables.md
filters/: mermaid.py  plantuml.py
slides/: Makefile  conclusions.md  header.tex  interface.txt
slides/cmake/: main.cpp
slides/episodes/: additional_topics.md  basic_steps.md  basic_steps_old.md  building_simple_targets.md  exercise.md  finding_packages.md  generator_expressions.md  installing.md  introduction.md  language.md  library.md  library_old.md  talk.md  targets.md  testing.md  variables.md  variables_old.md
slides/test/: sample.md
